Lavet img mappe og sat logo ind (test)

--- a/html/tema4.html
+++ b/html/tema4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="../css/layout.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Tema 4</title>
   </head>
@@ -12,7 +12,7 @@
       <div class="logo">
         <a href="index.html">
           <img
-            src="img/Logo_uden_tekst.webp"
+            src="../img/Logo til portfolio.webp"
             alt="Logo"
             height="50"
             width="50"
