--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html">
+        <a href="../Portfolio-eksamen/img/Logo til portfolio.webp">
           <img
-            src="img/Logo_uden_tekst.webp"
+            src="img/Logo til portfolio.webp"
             alt="Logo"
             height="50"
             width="50"
@@ -28,8 +28,8 @@
       <nav>
         <ul class="menu">
           <li><a href="index.html">Forside</a></li>
-          <li><a href="projekter.html">Projekter</a></li>
-          <li><a href="om_mig.html">Om mig</a></li>
+          <li><a href="../html/projekter.html">Projekter</a></li>
+          <li><a href="../html/om_mig.html">Om mig</a></li>
         </ul>
       </nav>
     </header>
