grid på forside og om mig + billeder som test

--- a/html/om_mig.html
+++ b/html/om_mig.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/layout.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Om mig</title>
   </head>
   <body>
@@ -27,11 +27,49 @@
       </label>
       <nav>
         <ul class="menu">
-          <li><a href="index.html">Forside</a></li>
+          <li><a href="../index.html">Forside</a></li>
           <li><a href="projekter.html">Projekter</a></li>
           <li><a href="om_mig.html">Om mig</a></li>
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="grid2_1-1">
+        <img
+          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
+          alt="Billede 1"
+        />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+          magnam dignissimos quisquam sint, molestias iure dolores rerum dolorem
+          unde cum nobis amet quidem, deleniti maxime asperiores enim dolorum
+          quae recusandae.
+        </p>
+      </section>
+      <section class="grid3_1-1">
+        <img
+          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
+          alt="Billede 2"
+        />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero porro,
+          repudiandae possimus maiores quae illo reprehenderit vel rerum
+          molestiae sunt voluptatibus doloremque, nobis, quis facere optio?
+          Mollitia magnam laudantium vel!
+        </p>
+      </section>
+      <section class="grid4_1-1">
+        <img
+          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
+          alt="Billede 3"
+        />
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi autem
+          voluptates culpa vitae optio asperiores repudiandae non provident et
+          ratione atque nihil nobis dignissimos accusamus, modi consequatur
+          explicabo quaerat nemo?
+        </p>
+      </section>
+    </main>
   </body>
 </html>
