--- a/html/projekter.html
+++ b/html/projekter.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/layout.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Projekter</title>
+    <link rel="stylesheet" href="../css/style.css" />
+    <title>Tema 2</title>
   </head>
   <body>
     <header>
@@ -27,7 +27,7 @@
       </label>
       <nav>
         <ul class="menu">
-          <li><a href="index.html">Forside</a></li>
+          <li><a href="../index.html">Forside</a></li>
           <li><a href="projekter.html">Projekter</a></li>
           <li><a href="om_mig.html">Om mig</a></li>
         </ul>
