--- a/index.html
+++ b/index.html
@@ -33,5 +33,25 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="grid1_1-1">
+        <h1>Velkommen</h1>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor,
+          obcaecati, dicta pariatur officia vero aliquam ipsum magni blanditiis,
+          eaque eveniet sapiente velit placeat asperiores totam repudiandae
+          laborum delectus fugiat illo!
+        </p>
+
+        <img
+          src="/img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
+          alt="Billede af mig"
+        />
+        <img
+          src="/img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
+          alt="Billede af mig"
+        />
+      </section>
+    </main>
   </body>
 </html>
