--- a/html/tema4.html
+++ b/html/tema4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/layout.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Tema 4</title>
   </head>
   <body>
@@ -27,7 +27,7 @@
       </label>
       <nav>
         <ul class="menu">
-          <li><a href="index.html">Forside</a></li>
+          <li><a href="../index.html">Forside</a></li>
           <li><a href="projekter.html">Projekter</a></li>
           <li><a href="om_mig.html">Om mig</a></li>
         </ul>
