--- a/html/tema2.html
+++ b/html/tema2.html
@@ -33,5 +33,50 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <h1>Tema 2</h1>
+      <section class="gridtema2_1-1">
+        <img
+          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
+          alt="billede 1"
+        />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius modi
+          esse numquam molestias quod voluptas, repellat facilis dolore
+          similique incidunt vitae, odio iusto reiciendis pariatur voluptates
+          dolores qui sunt a.
+        </p>
+      </section>
+      <section class="gridtema02_1-1">
+        <img
+          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
+          alt="billede 2"
+        />
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
+          sapiente molestiae adipisci possimus expedita deleniti iste vel alias,
+          eveniet provident pariatur voluptates ipsa repellendus facilis
+          laudantium id ipsum ad corrupti.
+        </p>
+      </section>
+      <section class="gridnederst_1-1">
+        <div class="link-container">
+          <h2>Link</h2>
+          <a href="../index.html" target="_blank">besøg link</a>
+          <a href="../index.html" target="_blank">besøg link</a>
+        </div>
+        <div>
+          <h2>Kompetencer</h2>
+          <ul>
+            <li>lorem bla bla</li>
+            <li>lorem bla bla</li>
+            <li>lorem bla bla</li>
+            <li>lorem bla bla</li>
+            <li>lorem bla bla</li>
+            <li>lorem bla bla</li>
+          </ul>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
