billeder, fonts og grid

--- a/html/projekter.html
+++ b/html/projekter.html
@@ -11,12 +11,7 @@
     <header>
       <div class="logo">
         <a href="index.html">
-          <img
-            src="../img/Logo til portfolio.webp"
-            alt="Logo"
-            height="50"
-            width="50"
-          />
+          <img src="../img/logo_endelige.svg" alt="Logo" height="50" width="50" />
         </a>
       </div>
       <input type="checkbox" id="menu-toggle" />
@@ -34,7 +29,62 @@
       </nav>
     </header>
     <main>
-      
+      <h1>Projekter.</h1>
+      <div class="grid_1-1-1-1">
+        <div class="image-container">
+          <img
+            src="../img/test_billede.png"
+            alt="Billede af Tema 2"
+            class="image"
+          />
+          <div class="overlay">
+            <div class="overlay-text">
+              <h2>Tema 2</h2>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum adipisci explicabo unde, dolorem vitae laudantium consequuntur deleniti distinctio, architecto voluptas dolor alias saepe? Ratione recusandae in, culpa molestiae animi corporis.
+            </div>
+          </div>
+        </div>
+        <div class="image-container">
+          <img
+            src="../img/test_billede.png"
+            alt="Billede af Tema 3"
+            class="image"
+          />
+          <div class="overlay">
+            <div class="overlay-text">
+              <h2>Tema 3</h2>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi rem ad eius eum repellendus quibusdam sed labore, repellat similique incidunt nemo numquam nam velit facere voluptas deserunt, fuga error consequatur!
+            </div>
+          </div>
+        </div>
+        <div class="image-container">
+          <img
+            src="../img/test_billede.png"
+            alt="Billede af Tema 4"
+            class="image"
+          />
+          <div class="overlay">
+            <div class="overlay-text">
+              <h2>Tema 4</h2>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat eum officia assumenda a similique provident saepe pariatur nostrum eius non eveniet, praesentium vel molestiae soluta eos ut illum minima sed!
+            </div>
+          </div>
+        </div>
+          <div class="image-container">
+          <img
+            src="../img/test_billede.png"
+            alt="Billede af Tema 5"
+            class="image"
+          />
+          <div class="overlay">
+            <div class="overlay-text">
+              <h2>Tema 5</h2>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora dignissimos accusamus ad harum necessitatibus ullam dolor odio, iure provident sequi nihil distinctio nisi fuga. Voluptatum maxime eligendi praesentium quod dolor!
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
