--- a/index.html
+++ b/index.html
@@ -10,13 +10,8 @@
   <body>
     <header>
       <div class="logo">
-        <a href="../Portfolio-eksamen/img/Logo til portfolio.webp">
-          <img
-            src="img/Logo til portfolio.webp"
-            alt="Logo"
-            height="50"
-            width="50"
-          />
+        <a href="img/logo_endelige.svg">
+          <img src="img/logo_endelige.svg" alt="Logo" height="50" width="50" />
         </a>
       </div>
       <input type="checkbox" id="menu-toggle" />
@@ -35,21 +30,18 @@
     </header>
     <main>
       <section class="grid1_1-1">
-        <h1>Velkommen</h1>
+        <h1>VELKOMMEN.</h1>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor,
-          obcaecati, dicta pariatur officia vero aliquam ipsum magni blanditiis,
-          eaque eveniet sapiente velit placeat asperiores totam repudiandae
-          laborum delectus fugiat illo!
+          Mit navn er Anne-Sophie Falck Winther & jeg læser til Multimediedesigner på KEA. Dette er min digitale portfølge & jeg vil her dele mine kreative projekter og erfaringer.
         </p>
 
         <img
-          src="/img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
-          alt="Billede af mig"
+          src="/img/selfie.png"
+          alt="Billede af mig" height="800" width="800"
         />
         <img
-          src="/img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
-          alt="Billede af mig"
+          src="/img/selfie3.png"
+          alt="Billede af mig" height="800" width="800"
         />
       </section>
     </main>
