--- a/html/om_mig.html
+++ b/html/om_mig.html
@@ -12,7 +12,7 @@
       <div class="logo">
         <a href="index.html">
           <img
-            src="../img/Logo til portfolio.webp"
+            src="../img/logo_endelige.svg"
             alt="Logo"
             height="100"
             width="100"
@@ -34,11 +34,9 @@
       </nav>
     </header>
     <main>
+      <h1>Om mig.</h1>
       <section class="grid2_1-1">
-        <img
-          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
-          alt="Billede 1"
-        />
+        <img src="../img/kaffebillede.png" alt="Billede 1" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
           magnam dignissimos quisquam sint, molestias iure dolores rerum dolorem
@@ -47,10 +45,7 @@
         </p>
       </section>
       <section class="grid3_1-1">
-        <img
-          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
-          alt="Billede 2"
-        />
+        <img src="../img/portrat.png" alt="Billede 2" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero porro,
           repudiandae possimus maiores quae illo reprehenderit vel rerum
