--- a/html/tema5.html
+++ b/html/tema5.html
@@ -12,7 +12,7 @@
       <div class="logo">
         <a href="index.html">
           <img
-            src="../img/Logo til portfolio.webp"
+            src="../img/logo_endelige.svg"
             alt="Logo"
             height="50"
             width="50"
