--- a/html/om_mig.html
+++ b/html/om_mig.html
@@ -35,35 +35,55 @@
     </header>
     <main>
       <h1>Om mig.</h1>
+      
+      <section class="grid3_1-1">
+        <img src="../img/portræt.png" alt="Billede 2" />
+        <div>
+          <h2>Hvem er jeg?</h2>
+          <p>
+            Mit navn er Anne-Sophie Falck Winther, & jeg er 21 år gammel. Jeg
+            bor i Søborg, lige udenfor København, sammen med min kæreste. Jeg
+            kommer oprindeligt fra Hillerød, hvor jeg er vokset op i skøn
+            familie på fem, hvoraf jeg har to ældre søskende. Når jeg ikke
+            studerer eller arbejder, elsker jeg at bevæge mig i form af løb. Det
+            er en rar måde at mærke kroppen på & lade tankerne få frit løb. Løb
+            giver mig energi & glæde, & det er en vigtig del af mit velvære. Ud
+            over løb elsker jeg at tilbringe tid sammen med min familie, min
+            kæreste og mine veninder.
+          </p>
+        </div>
+      </section>
       <section class="grid2_1-1">
         <img src="../img/kaffebillede.png" alt="Billede 1" />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-          magnam dignissimos quisquam sint, molestias iure dolores rerum dolorem
-          unde cum nobis amet quidem, deleniti maxime asperiores enim dolorum
-          quae recusandae.
-        </p>
-      </section>
-      <section class="grid3_1-1">
-        <img src="../img/portrat.png" alt="Billede 2" />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero porro,
-          repudiandae possimus maiores quae illo reprehenderit vel rerum
-          molestiae sunt voluptatibus doloremque, nobis, quis facere optio?
-          Mollitia magnam laudantium vel!
-        </p>
+        <div>
+          <h2>Kaffebar</h2>
+          <p>
+            Ved siden af mit studie arbejder jeg på Shahbaz Kaffebar, og det har
+            jeg gjort i snart to år. Inden min start på multimedieuddannelsen,
+            havde jeg rollen som manager. Her havde jeg ansvaret for alt fra
+            personaleledelse og vagtplanlægning til indkøb af varer og
+            implementering af kreative løsninger. Denne erfaring har ikke kun
+            styrket mine kompetencer inden for ledelse og planlægning, men har
+            også givet mig en unik forståelse for kundeservice og
+            driftsaspekter, som jeg er sikker på også kan bidrage positivt til
+            multimediebranchen.
+          </p>
+        </div>
       </section>
       <section class="grid4_1-1">
-        <img
-          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
-          alt="Billede 3"
-        />
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi autem
-          voluptates culpa vitae optio asperiores repudiandae non provident et
-          ratione atque nihil nobis dignissimos accusamus, modi consequatur
-          explicabo quaerat nemo?
-        </p>
+        <img src="../img/feriebillede.png" alt="Billede 3" />
+        <div>
+          <h2>Min interesse</h2>
+          <p>
+            Jeg har valgt at læse til multimediedesigner, da jeg elsker at være
+            kreativ. Jeg nyder at kunne udtrykke mig visuelt, og jeg har en stor
+            passion for at arbejde med farver, æstetik og flotte billeder. I min
+            fritid finder jeg stor glæde ved at tegne og male. Jeg elsker også
+            at tage stemningsfulde billeder af de ting, jeg oplever, og fange
+            øjeblikke, der fortæller en historie. Derudover har jeg også en stor
+            passion for indretning og boligtrends.
+          </p>
+        </div>
       </section>
     </main>
   </body>
