--- a/index.html
+++ b/index.html
@@ -32,16 +32,22 @@
       <section class="grid1_1-1">
         <h1>VELKOMMEN.</h1>
         <p>
-          Mit navn er Anne-Sophie Falck Winther & jeg læser til Multimediedesigner på KEA. Dette er min digitale portfølge & jeg vil her dele mine kreative projekter og erfaringer.
+          Mit navn er Anne-Sophie Falck Winther & jeg læser til
+          Multimediedesigner på KEA. Dette er min digitale portfølge & jeg vil
+          her dele mine kreative projekter og erfaringer.
         </p>
 
         <img
-          src="/img/selfie.png"
-          alt="Billede af mig" height="800" width="800"
+          src="/img/Index_billede.png"
+          alt="Billede af mig"
+          height="800"
+          width="800"
         />
         <img
-          src="/img/selfie3.png"
-          alt="Billede af mig" height="800" width="800"
+          src="/img/Index_billede.png"
+          alt="Billede af mig"
+          height="800"
+          width="800"
         />
       </section>
     </main>
