--- a/html/projekter.html
+++ b/html/projekter.html
@@ -32,59 +32,69 @@
       <h1>Projekter.</h1>
       <div class="grid_1-1-1-1">
         <div class="image-container">
+          <a href="tema2.html">
           <img
-            src="../img/test_billede.png"
+            src="../img/tema0.2.png"
             alt="Billede af Tema 2"
             class="image"
           />
           <div class="overlay">
             <div class="overlay-text">
               <h2>Tema 2</h2>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum adipisci explicabo unde, dolorem vitae laudantium consequuntur deleniti distinctio, architecto voluptas dolor alias saepe? Ratione recusandae in, culpa molestiae animi corporis.
+              Grundlæggende Web
             </div>
           </div>
+          </a>
         </div>
         <div class="image-container">
+          <a href="tema3.html">
           <img
-            src="../img/test_billede.png"
+            src="../img/tema0.3.png"
             alt="Billede af Tema 3"
             class="image"
           />
           <div class="overlay">
             <div class="overlay-text">
               <h2>Tema 3</h2>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi rem ad eius eum repellendus quibusdam sed labore, repellat similique incidunt nemo numquam nam velit facere voluptas deserunt, fuga error consequatur!
+               Grundlæggende UX/UI
             </div>
           </div>
+          </a>
         </div>
         <div class="image-container">
+          <a href="tema4.html">
           <img
-            src="../img/test_billede.png"
+            src="../img/tema.04.png"
             alt="Billede af Tema 4"
             class="image"
           />
           <div class="overlay">
             <div class="overlay-text">
               <h2>Tema 4</h2>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat eum officia assumenda a similique provident saepe pariatur nostrum eius non eveniet, praesentium vel molestiae soluta eos ut illum minima sed!
+              Animation
             </div>
           </div>
+          </a>
         </div>
           <div class="image-container">
+          <a href="tema4.html">
           <img
-            src="../img/test_billede.png"
+            src="../img/tema0.5.png"
             alt="Billede af Tema 5"
             class="image"
           />
           <div class="overlay">
             <div class="overlay-text">
               <h2>Tema 5</h2>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora dignissimos accusamus ad harum necessitatibus ullam dolor odio, iure provident sequi nihil distinctio nisi fuga. Voluptatum maxime eligendi praesentium quod dolor!
+              Grundlæggende indhold
             </div>
           </div>
+          </a>
         </div>
         </div>
       </div>
     </main>
+    <hr />
+    <footer>@Anne-Sophie Falck winther</footer>
   </body>
 </html>
