--- a/html/tema3.html
+++ b/html/tema3.html
@@ -69,12 +69,15 @@
         <div>
           <h2>Kompetencer</h2>
           <ul>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
+            <li>UX/UI konventioner</li>
+            <li>Indholdsproduktion - desktop research</li>
+            <li>Moodboard</li>
+            <li>Styletile</li>
+            <li>Wireframes</li>
+            <li>Prototype og layoutdiagram</li>
+            <li>Test (5 sekunders test, BERT og lighthouse)</li>
+            <li>Præsentation og Dokumentation</li>
+            <li>Målgruppe og user stories</li>
           </ul>
         </div>
       </section>
