--- a/html/tema4.html
+++ b/html/tema4.html
@@ -69,12 +69,18 @@
         <div>
           <h2>Kompetencer</h2>
           <ul>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
+            <li></li>
+            <li>Billede formater</li>
+            <li>Javascript</li>
+            <li>Formgivning og kompositionsprincipper</li>
+            <li>Design af UI og spil elementer</li>
+            <li>Designprincipper</li>
+            <li>Skitseringsteknikker og idegenererings taktikker</li>
+            <li>Paperprototype</li>
+            <li>CSS animation</li>
+            <li>UML aktivitetsprogrammer og State machine diagrammer</li>
+            <li>Individuel projektudvikling</li>
+            <li>Research & genre</li>
           </ul>
         </div>
       </section>
