--- a/html/tema5.html
+++ b/html/tema5.html
@@ -69,12 +69,15 @@
         <div>
           <h2>Kompetencer</h2>
           <ul>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
+            <li>Html forms og videoplatforme</li>
+            <li>Filformater</li>
+            <li>Introduktion til Github</li>
+            <li>Præsentation og dokumentation</li>
+            <li>Beskæring og colorgrading</li>
+            <li>Premiere pro og after effects</li>
+            <li>Storybord</li>
+            <li>Klippeteori</li>
+            <li>Scrum og trello</li>
           </ul>
         </div>
       </section>
