--- a/html/tema2.html
+++ b/html/tema2.html
@@ -41,12 +41,15 @@
           src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
           alt="billede 1"
         />
+        <div>
+        <h2>Grundlæggende web</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius modi
           esse numquam molestias quod voluptas, repellat facilis dolore
           similique incidunt vitae, odio iusto reiciendis pariatur voluptates
           dolores qui sunt a.
         </p>
+        </div>
       </section>
       <section class="gridtema02_1-1">
         <img
@@ -69,12 +72,14 @@
         <div>
           <h2>Kompetencer</h2>
           <ul>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
-            <li>lorem bla bla</li>
+            <li>Introduktion til Figma</li>
+            <li>Filformater</li>
+            <li>Designkonventioner</li>
+            <li>Intro til HTML og CSS - herunder validering</li>
+            <li>Responsivt design med tilgangen "mobile first"</li>
+            <li>Ophavsret</li>
+            <li>Billedbehandling</li>
+            <li>Introduktion til Filezilla</li>
           </ul>
         </div>
       </section>
