--- a/index.html
+++ b/index.html
@@ -41,15 +41,13 @@
 
         <img
           src="/img/Index_billede.png"
-          alt="Billede af mig"
-          height="800"
-          width="800"
+          alt="Billede af mig" height="1000" width="1000"
+         
         />
         <img
           src="/img/Index_billede.png"
-          alt="Billede af mig"
-          height="800"
-          width="800"
+          alt="Billede af mig" height="1000" width="1000"
+          
         />
       </section>
     </main>
