margin og padding

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Forside</title>
   </head>
   <body>
-  
     <header>
       <div class="logo">
         <a href="img/logo_endelige.svg">
@@ -41,13 +40,15 @@
 
         <img
           src="/img/Index_billede.png"
-          alt="Billede af mig" height="1000" width="1000"
-         
+          alt="Billede af mig"
+          height="1000"
+          width="1000"
         />
         <img
           src="/img/Index_billede.png"
-          alt="Billede af mig" height="1000" width="1000"
-          
+          alt="Billede af mig"
+          height="1000"
+          width="1000"
         />
       </section>
     </main>
