Arbejdet på under siderne til hvert projekt

--- a/html/projekter.html
+++ b/html/projekter.html
@@ -96,6 +96,6 @@
       </div>
     </main>
     <hr />
-    <footer>@Anne-Sophie Falck winther</footer>
+    <footer>&copy;Anne-Sophie Falck Winther 2024</footer>
   </body>
 </html>
