--- a/html/tema3.html
+++ b/html/tema3.html
@@ -41,12 +41,36 @@
           src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
           alt="billede 1"
         />
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius modi
-          esse numquam molestias quod voluptas, repellat facilis dolore
-          similique incidunt vitae, odio iusto reiciendis pariatur voluptates
-          dolores qui sunt a.
-        </p>
+        <div>
+          <h2>Grundlæggende UX/UI</h2>
+          <p>
+            Tema 3 havde til formål at give mig en grundlæggende forståelse af
+            samspillet mellem brugeren og brugergrænseflader. Jeg blev
+            introduceret til teorier, værktøjer og metoder, der anvendes til
+            research, design og test i en digital produktudviklingsproces. Dette
+            gav mig en relevant forståelse af vigtigheden af at træffe
+            designvalg og udvikle produkter baseret på konkrete indsigter om
+            faktiske brugere fremfor antagelser og designvalg uden belæg.
+            Samtidig lærte jeg, hvordan man præsenterer sin proces og formidler
+            sin research og testresultater på en relevant og spændende måde.
+          </p>
+          <p>
+            I dette tema fik jeg til opgave at udvikle en hjemmeside baseret på
+            et selvvalgt emne. Jeg valgte at lave en hjemmeside om "Boligtrends
+            i 2024." Her prøvede jeg især kræfter med research,
+            designkonventioner, kodning samt test af min digitale
+            brugergrænseflade. Jeg blev også introduceret til designbegreber
+            såsom moodboards, styletiles, user stories, wireframes,
+            idéudviklingsmetoder og forskellige prototyper.
+          </p>
+          <p>
+            I denne opgave besluttede jeg at lave et meget stilrent, enkelt og
+            minimalistisk design. Dette bevidste valg tog jeg, da jeg ønskede,
+            at mit endelige kodede resultat skulle ligge så tæt som muligt op ad
+            min digitale prototype. Selvom jeg kom i mål med dette, blev jeg
+            alligevel udfordret af kodningen, på trods af det enkle design.
+          </p>
+        </div>
       </section>
       <section class="gridtema02_1-1">
         <img
@@ -63,7 +87,11 @@
       <section class="gridnederst_1-1">
         <div class="link-container">
           <h2>Link</h2>
-          <a href="../index.html" target="_blank">besøg link</a>
+          <a
+            href="http://byas.dk/emnesite/index.html "
+            target="Link til opgaven"
+            >Link til opgaven</a
+          >
           <a href="../index.html" target="_blank">besøg link</a>
         </div>
         <div>
@@ -83,6 +111,6 @@
       </section>
     </main>
     <hr />
-    <footer>@Anne-Sophie Falck winther</footer>
+   <footer>&copy;Anne-Sophie Falck Winther 2024</footer>
   </body>
 </html>
