--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
         <h1>VELKOMMEN.</h1>
         <p>
           Mit navn er Anne-Sophie Falck Winther & jeg læser til
-          Multimediedesigner på KEA. Dette er min digitale portfølge & jeg vil
-          her dele mine kreative projekter og erfaringer.
+          Multimediedesigner på KEA. Dette er min digitale portfølge & her vil
+          jeg dele mine kreative projekter og erfaringer.
         </p>
-
         <img
           src="/img/Index_billede.png"
           alt="Billede af mig"
@@ -53,6 +52,6 @@
       </section>
     </main>
     <hr />
-    <footer>@Anne-Sophie Falck winther</footer>
+    <footer>&copy;Anne-Sophie Falck Winther 2024</footer>
   </body>
 </html>
