--- a/html/om_mig.html
+++ b/html/om_mig.html
@@ -36,7 +36,7 @@
     <hr />
     <main>
       <h1>Om mig.</h1>
-      
+
       <section class="grid3_1-1">
         <img src="../img/portræt.png" alt="Billede 2" />
         <div>
@@ -57,7 +57,7 @@
       <section class="grid2_1-1">
         <img src="../img/kaffebillede.png" alt="Billede 1" />
         <div>
-          <h2>Kaffebar</h2>
+          <h2>Job</h2>
           <p>
             Ved siden af mit studie arbejder jeg på Shahbaz Kaffebar, og det har
             jeg gjort i snart to år. Inden min start på multimedieuddannelsen,
@@ -88,6 +88,6 @@
       </section>
     </main>
     <hr />
-    <footer>@Anne-Sophie Falck winther</footer>
+    <footer>&copy;Anne-Sophie Falck Winther 2024</footer>
   </body>
 </html>
