--- a/html/tema2.html
+++ b/html/tema2.html
@@ -44,10 +44,27 @@
         <div>
           <h2>Grundlæggende web</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius modi
-            esse numquam molestias quod voluptas, repellat facilis dolore
-            similique incidunt vitae, odio iusto reiciendis pariatur voluptates
-            dolores qui sunt a.
+            Tema 2 havde til formål at give mig en grundlæggende introduktion
+            til de mest anvendte redskaber i en multimediedesigners
+            værktøjskasse. Her blev jeg introduceret til grundlæggende faglige
+            begreber inden for design af digitale brugergrænseflader, digital
+            indholdsproduktion, digital kommunikation og responsivt webdesign.
+          </p>
+          <p>
+            Hovedfokusset i dette projekt var at jeg blev introduceret til
+            VScode herunder HTML & CSS. Derudover blev jeg introduceret for
+            grundlæggende begreber såsom filformater, designkonventioner, grid,
+            media queries, flex og ikke mindst vigtigheden i en god mappe
+            struktur.
+          </p>
+          <p>
+            I denne opgave blev alt indholdet til hjemmesiden tildelt, herunder
+            billeder, tekstmateriale og layoutdiagrammer. Dette gav mig en god
+            mulighed for, at opnå en grundlæggende forståelse for især HTML og
+            CSS. Derudover lærte jeg også hvordan man lavede en responsiv
+            hjemmeside ved hjælp af layoutdiagrammer, grid og media queries.
+            Dette var bestemt også den del af opgaven, hvor jeg blev sat
+            allermest på prøve og havde flest komplikationer.
           </p>
         </div>
       </section>
@@ -66,13 +83,16 @@
       <section class="gridnederst_1-1">
         <div class="link-container">
           <h2>Link</h2>
-          <a href="../index.html" target="_blank">besøg link</a>
+          <a href="https://byas.dk/kea/02_website/" target="Link til opgaven"
+            >Link til opgaven</a
+          >
           <a href="../index.html" target="_blank">besøg link</a>
         </div>
         <div>
           <h2>Kompetencer</h2>
           <ul>
             <li>Introduktion til Figma</li>
+            <li>Grid, media queries og flex</li>
             <li>Filformater</li>
             <li>Designkonventioner</li>
             <li>Intro til HTML og CSS - herunder validering</li>
@@ -85,6 +105,6 @@
       </section>
     </main>
     <hr />
-    <footer>@Anne-Sophie Falck winther</footer>
+    <footer>&copy;Anne-Sophie Falck Winther 2024</footer>
   </body>
 </html>
