--- a/html/tema4.html
+++ b/html/tema4.html
@@ -41,29 +41,45 @@
           src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
           alt="billede 1"
         />
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius modi
-          esse numquam molestias quod voluptas, repellat facilis dolore
-          similique incidunt vitae, odio iusto reiciendis pariatur voluptates
-          dolores qui sunt a.
-        </p>
+        <div>
+          <h2>Animation</h2>
+          <p>
+            Tema 4 havde til formål at give mig en grundlæggende forståelse af
+            JavaScript. JavaScript er et programmeringssprog, der bruges til at
+            skabe dynamiske websites eller spil. I dette tema fik jeg til opgave
+            at kode et simpelt spil og finde på mit eget koncept samt designe
+            alle spilelementerne selv. Jeg blev introduceret til teori og
+            designprincipper inden for UI-elementer, figurelementer,
+            baggrundsdesign og kompositionsteknikker. Desuden blev jeg også
+            introduceret til rentegning med vektorgrafik i Adobe Illustrator.
+          </p>
+          <p>
+            Dette tema omfattede også aktivitetsdiagrammer og state machine
+            diagrammer, skitseringsteknikker, genereringstaktikker,
+            papirprototyper, CSS-positionering, CSS-animation osv.
+          </p>
+          <p>
+            Denne opgave satte mig virkelig på prøve. JavaScript-animationer
+            krævede et betydeligt højere kodningsniveau end tidligere opgaver.
+            Derudover var det udfordrende at holde hovedet koldt og bibeholde
+            overblikket over processen.
+          </p>
+        </div>
       </section>
       <section class="gridtema02_1-1">
         <img
           src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
           alt="billede 2"
         />
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
-          sapiente molestiae adipisci possimus expedita deleniti iste vel alias,
-          eveniet provident pariatur voluptates ipsa repellendus facilis
-          laudantium id ipsum ad corrupti.
-        </p>
       </section>
       <section class="gridnederst_1-1">
         <div class="link-container">
           <h2>Link</h2>
-          <a href="../index.html" target="_blank">besøg link</a>
+          <a
+            href="https://byas.dk/04_animation/website/index.html "
+            target="Link til opgaven"
+            >Link til opgaven</a
+          >
           <a href="../index.html" target="_blank">besøg link</a>
         </div>
         <div>
@@ -86,6 +102,6 @@
       </section>
     </main>
     <hr />
-    <footer>@Anne-Sophie Falck winther</footer>
+   <footer>&copy;Anne-Sophie Falck Winther 2024</footer>
   </body>
 </html>
