--- a/html/tema5.html
+++ b/html/tema5.html
@@ -41,6 +41,9 @@
           src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
           alt="billede 1"
         />
+      <div>
+        <h2>Grundlæggende indhold</h2>
+      
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius modi
           esse numquam molestias quod voluptas, repellat facilis dolore
@@ -59,12 +62,13 @@
           eveniet provident pariatur voluptates ipsa repellendus facilis
           laudantium id ipsum ad corrupti.
         </p>
+      </div>
       </section>
       <section class="gridnederst_1-1">
         <div class="link-container">
           <h2>Link</h2>
-          <a href="../index.html" target="_blank">besøg link</a>
-          <a href="../index.html" target="_blank">besøg link</a>
+          <a href="https://byas.dk/kea/05_passionsite/passionsite/" target="Link til passionsite opgaven">Link til passionsite</a>
+          <a href="http://byas.dk/kea/05_virksomhedssite/website/ " target="link til virksomhedssite opgaven">Link til virksomhedssite</a>
         </div>
         <div>
           <h2>Kompetencer</h2>
@@ -83,6 +87,6 @@
       </section>
     </main>
     <hr />
-    <footer>@Anne-Sophie Falck winther</footer>
+    <footer>&copy;Anne-Sophie Falck Winther 2024</footer>
   </body>
 </html>
