--- a/html/tema4.html
+++ b/html/tema4.html
@@ -74,7 +74,7 @@
       </section>
       <section class="gridnederst_1-1">
         <div class="link-container">
-          <h2>Link</h2>
+          <h2>Links</h2>
           <a
             href="https://byas.dk/04_animation/website/index.html "
             target="Link til opgaven"
