--- a/html/tema5.html
+++ b/html/tema5.html
@@ -66,7 +66,7 @@
       </section>
       <section class="gridnederst_1-1">
         <div class="link-container">
-          <h2>Link</h2>
+          <h2>Links</h2>
           <a href="https://byas.dk/kea/05_passionsite/passionsite/" target="Link til passionsite opgaven">Link til passionsite</a>
           <a href="http://byas.dk/kea/05_virksomhedssite/website/ " target="link til virksomhedssite opgaven">Link til virksomhedssite</a>
         </div>
