--- a/html/tema2.html
+++ b/html/tema2.html
@@ -37,10 +37,7 @@
     <main>
       <h1>Tema 2</h1>
       <section class="gridtema2_1-1">
-        <img
-          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
-          alt="billede 1"
-        />
+        <img src="../img/billedetema2.png" alt="billede 1" />
         <div>
           <h2>Grundlæggende web</h2>
           <p>
@@ -69,20 +66,19 @@
         </div>
       </section>
       <section class="gridtema02_1-1">
-        <img
-          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
-          alt="billede 2"
-        />
+        <img src="../img/wireframetema2.png" alt="billede 2" />
+
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
           sapiente molestiae adipisci possimus expedita deleniti iste vel alias,
           eveniet provident pariatur voluptates ipsa repellendus facilis
           laudantium id ipsum ad corrupti.
         </p>
+        <img src="../img/layoutdiagramtema2.png" alt="billede 2" />
       </section>
       <section class="gridnederst_1-1">
         <div class="link-container">
-          <h2>Link</h2>
+          <h2>Links</h2>
           <a href="https://byas.dk/kea/02_website/" target="Link til opgaven"
             >Link til opgaven</a
           >
