--- a/html/tema3.html
+++ b/html/tema3.html
@@ -86,7 +86,7 @@
       </section>
       <section class="gridnederst_1-1">
         <div class="link-container">
-          <h2>Link</h2>
+          <h2>Links</h2>
           <a
             href="http://byas.dk/emnesite/index.html "
             target="Link til opgaven"
