--- a/html/tema2.html
+++ b/html/tema2.html
@@ -67,14 +67,26 @@
       </section>
       <section class="gridtema02_1-1">
         <img src="../img/wireframetema2.png" alt="billede 2" />
-
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
-          sapiente molestiae adipisci possimus expedita deleniti iste vel alias,
-          eveniet provident pariatur voluptates ipsa repellendus facilis
-          laudantium id ipsum ad corrupti.
-        </p>
+        <div>
+          <h2>Eksempler</h2>
+          <p>
+            Her er det wireframe og layoutdiagram, vi blev udleveret. Som
+            udgangspunkt koder man altid mobil først, og derefter tilpasser man
+            det til webformat. Dette er betegnelsen for et responsivt design.
+            Formålet med responsivt design er at sikre, at brugeroplevelsen
+            forbliver optimal på tværs af forskellige enheder, herunder
+            computere, tablets og telefoner. Et responsivt design opnås ved
+            hjælp af medieforespørgsler (media queries).
+          </p>
+        </div>
         <img src="../img/layoutdiagramtema2.png" alt="billede 2" />
+        <p>
+          Layoutdiagrammer er nyttige, fordi de giver et visuelt overblik over,
+          hvordan en hjemmeside skal se ud. Dette gør også, at kodningsprocessen
+          bliver mere overskuelig, da man kan få et overblik over, hvordan
+          layoutet skal kodes ud fra de HTML-tags, der er defineret på
+          layoutdiagrammet.
+        </p>
       </section>
       <section class="gridnederst_1-1">
         <div class="link-container">
