Ændringer i layout og billeder

--- a/html/tema2.html
+++ b/html/tema2.html
@@ -37,7 +37,7 @@
     <main>
       <h1>Tema 2</h1>
       <section class="gridtema2_1-1">
-        <img src="../img/billedetema2.png" alt="billede 1" />
+        <img src="../img/billedetema2.png" alt="billede 1" width="900" height="900"/>
         <div>
           <h2>Grundlæggende web</h2>
           <p>
@@ -66,9 +66,9 @@
         </div>
       </section>
       <section class="gridtema02_1-1">
-        <img src="../img/wireframetema2.png" alt="billede 2" />
+        <img src="../img/wireframetema2.png" alt="billede 2" width="900" height="900"/>
         <div>
-          <h2>Eksempler</h2>
+          <h2>Responsivt design</h2>
           <p>
             Her er det wireframe og layoutdiagram, vi blev udleveret. Som
             udgangspunkt koder man altid mobil først, og derefter tilpasser man
@@ -79,7 +79,9 @@
             hjælp af medieforespørgsler (media queries).
           </p>
         </div>
-        <img src="../img/layoutdiagramtema2.png" alt="billede 2" />
+        <img src="../img/layoutdiagramtema2.png" alt="billede 2" width="900" height="900" />
+        <div>
+        <h2>Responsivt design</h2>
         <p>
           Layoutdiagrammer er nyttige, fordi de giver et visuelt overblik over,
           hvordan en hjemmeside skal se ud. Dette gør også, at kodningsprocessen
@@ -87,6 +89,7 @@
           layoutet skal kodes ud fra de HTML-tags, der er defineret på
           layoutdiagrammet.
         </p>
+        </div>
       </section>
       <section class="gridnederst_1-1">
         <div class="link-container">
