--- a/html/tema3.html
+++ b/html/tema3.html
@@ -38,8 +38,8 @@
       <h1>Tema 3</h1>
       <section class="gridtema2_1-1">
         <img
-          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
-          alt="billede 1"
+          src="../img/tema3.png"
+          alt="billede 1" width="900" height="900"
         />
         <div>
           <h2>Grundlæggende UX/UI</h2>
@@ -74,8 +74,8 @@
       </section>
       <section class="gridtema02_1-1">
         <img
-          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
-          alt="billede 2"
+          src="../img/tema3.png"
+          alt="billede 2" width="900" height="900"
         />
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
