--- a/html/tema4.html
+++ b/html/tema4.html
@@ -37,10 +37,7 @@
     <main>
       <h1>Tema 4</h1>
       <section class="gridtema2_1-1">
-        <img
-          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
-          alt="billede 1"
-        />
+        <!-- <img src="../img/tema4.png" alt="billede 1" width="900" height="900"/> -->
         <div>
           <h2>Animation</h2>
           <p>
@@ -65,12 +62,19 @@
             overblikket over processen.
           </p>
         </div>
+        <div>
+          <h2>eksempel på kode</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
+            repudiandae tenetur consequuntur aspernatur ipsum dolorum saepe et,
+            doloribus dicta ad soluta id eligendi? Rem, beatae dicta earum
+            temporibus quam aspernatur.
+          </p>
+        </div>
       </section>
       <section class="gridtema02_1-1">
-        <img
-          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
-          alt="billede 2"
-        />
+        <img src="../img/tema4.png" alt="billede 2" width="900" height="900" />
+        <img src="../img/tema4.png" alt="billede 2" width="900" height="900" />
       </section>
       <section class="gridnederst_1-1">
         <div class="link-container">
@@ -102,6 +106,6 @@
       </section>
     </main>
     <hr />
-   <footer>&copy;Anne-Sophie Falck Winther 2024</footer>
+    <footer>&copy;Anne-Sophie Falck Winther 2024</footer>
   </body>
 </html>
