--- a/html/tema5.html
+++ b/html/tema5.html
@@ -38,30 +38,41 @@
       <h1>Tema 5</h1>
       <section class="gridtema2_1-1">
         <img
-          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
-          alt="billede 1"
+          src="../img/tema5.png"
+          alt="billede 1" width="900" height="900"
         />
       <div>
         <h2>Grundlæggende indhold</h2>
-      
+      <h3>Passionsite</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius modi
-          esse numquam molestias quod voluptas, repellat facilis dolore
-          similique incidunt vitae, odio iusto reiciendis pariatur voluptates
-          dolores qui sunt a.
+          I den første opgave skulle vi lave en "Passionsite", altså en hjemmeside omhandlende en person med en passion. Vi blev sat sammen to og to, så vi var to om at optage materialet til videoindholdet til sitet. Det vil dermed sige, at selve videoredigeringen og kodningen af sitet var noget, vi lavede individuelt.
+        </p>
+        <p>
+          Jeg lavede et site omhandlende Naomi Jamakaovic, som er i gang med at uddanne sig til tøjdesigner, også på KEA. Til denne opgave var wireframes og layoutdiagrammer udleveret, så fokusset lå primært på at prøve kræfter med at lave en video til sitet samt at tage nogle spændende billeder til sitet. I denne opgave erfarede jeg også, hvor stor en hjælp det er at have lavet et storyboard, inden man tager ud og optager.
+        </p>
+        <p>
+          Under denne opgave fik jeg et større kendskab til videoredigering i Premiere Pro. Derudover blev jeg også bekendt med begreber som adjustment layers, color grading, billedformater og anden relevant klippeteori. Jeg lavede også et moodboard for at beslutte, hvilket udtryk siden skulle have, så jeg bedst muligt fik afspejlet min interviewperson i sitets udtryk.
         </p>
       </section>
       <section class="gridtema02_1-1">
         <img
-          src="../img/Skærmbillede 2024-06-05 kl. 17.27.39.png"
-          alt="billede 2"
+          src="../img/tema5gruppe.png"
+          alt="billede 2" width="900" height="900"
         />
+        <div>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
-          sapiente molestiae adipisci possimus expedita deleniti iste vel alias,
-          eveniet provident pariatur voluptates ipsa repellendus facilis
-          laudantium id ipsum ad corrupti.
+         
+I anden opgave arbejdede vi i grupper af fire. Her fik vi til opgave at redesigne en virksomheds nuværende hjemmeside. Det var op til os i gruppen at bestemme, hvilket redesign hjemmesiden skulle have (layout) samt på hvilken måde vi ville implementere video på.
         </p>
+        <p>
+          I denne opgave blev vi introduceret til, hvordan man effektivt arbejder sammen i teams, og i den forbindelse blev vi introduceret til Scrum, Trello og GitHub - som endte med at blive en stor hjælp gennem vores projekt.
+
+Opgaven var en oplagt mulighed for at få genopfrisket alle de ting, vi havde lært gennem første semester. Det gav dermed en mere omfattende forståelse af de elementer, der er vigtige, når det kommer til design, kodning og test.
+        </p>
+        <p>
+          I redesign-opgaven havde jeg ansvaret for at kode undersiden "Vi udfører". Derudover deltog jeg også i mødet for "Scrum of Scrums". Her havde jeg til opgave at videreformidle til de andre scrum masters i de andre grupper, hvor langt vi i vores gruppe var i vores proces, samt hvilke problemstillinger vi var løbet ind i på det givne tidspunkt.
+        </p>
+      </div>
       </div>
       </section>
       <section class="gridnederst_1-1">
