--- a/html/om_mig.html
+++ b/html/om_mig.html
@@ -38,7 +38,7 @@
       <h1>Om mig.</h1>
 
       <section class="grid3_1-1">
-        <img src="../img/portræt.png" alt="Billede 2" />
+        <img src="../img/portræt.png" alt="Billede 2" width="500" height="500"/>
         <div>
           <h2>Hvem er jeg?</h2>
           <p>
@@ -55,7 +55,7 @@
         </div>
       </section>
       <section class="grid2_1-1">
-        <img src="../img/kaffebillede.png" alt="Billede 1" />
+        <img src="../img/kaffebillede.png" alt="Billede 1" width="500" height="500" />
         <div>
           <h2>Job</h2>
           <p>
@@ -72,7 +72,7 @@
         </div>
       </section>
       <section class="grid4_1-1">
-        <img src="../img/feriebillede.png" alt="Billede 3" />
+        <img src="../img/feriebillede.png" alt="Billede 3" width="500" height="500"/>
         <div>
           <h2>Min interesse</h2>
           <p>
